// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: ErrorNote > should show all provided props 1`] = `
<nc-note-card-stub
  class="note-card"
  showalert="false"
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
  <p
    class="note-card--error-description"
  >
    <span>
      Test error message. 
    </span>
    <a
      class="link"
      href="http://example.com"
      target="_blank"
      title="Test link"
    >
      Test link
    </a>
  </p>
</nc-note-card-stub>
`;

exports[`Component: ErrorNote > should show error title 1`] = `
<nc-note-card-stub
  class="note-card"
  showalert="false"
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
  <p
    class="note-card--error-description"
  >
    <!--v-if-->
    <!--v-if-->
  </p>
</nc-note-card-stub>
`;

exports[`Component: ErrorNote > should show error title and error message 1`] = `
<nc-note-card-stub
  class="note-card"
  showalert="false"
  type="error"
>
  <p
    class="note-card--title"
  >
    <b>
      Test error
    </b>
  </p>
  <p
    class="note-card--error-description"
  >
    <span>
      Test error message. 
    </span>
    <!--v-if-->
  </p>
</nc-note-card-stub>
`;
